# clean-architecture-project

./: .pylintrc  README.md  pyproject.toml
